<resources>
    <string name="app_name">YogaGuide</string>
    <string name="up_to_down">send to down</string>
    <string name="up_to_activity">send to activity</string>
    <string name="down_to_up">send to up</string>
    <string name="down_to_activity">send to activity</string>
    <string name="activity_to_up">send to up</string>
    <string name="activity_to_down">send to down</string>
    <string name="empty">empty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
