<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_up_root_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <Button
        android:id="@+id/button_up_to_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/up_to_down"/>
    <Button
        android:id="@+id/button_up_to_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/up_to_activity"/>
    <TextView
        android:id="@+id/text_view_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:gravity="center_horizontal"/>


</LinearLayout>