<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:id="@+id/fragment_down_root_layout">
    <Button
        android:id="@+id/button_down_to_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/down_to_up"/>
    <Button
        android:id="@+id/button_down_to_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/down_to_activity"/>
    <TextView
        android:id="@+id/text_view_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:gravity="center_horizontal"/>


</LinearLayout>